# courtlistener-cli

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  UPDATE_SUMMARY.md  courtlistener-api.yaml  courtlistener_cli_PRD.md  mkdocs.yml  pyproject.toml  requirements.txt
.claude/skills/api-to-doc/: SKILL.md
.claude/skills/courtlistener-cli/: .gitignore  COOKBOOK.md  README.md  SKILL.md
.claude/skills/doc-to-prd/: SKILL.md
.claude/skills/prd-to-cli/: SKILL.md
.github/workflows/: docs.yml
data/: dockets.xlsx  sample-batch.csv
docs/: SEARCH_TYPES.md  authentication.md  command-reference.md  index.md  installation.md  quickstart.md
docs/api/v4_wiki_md/: alerts.md  american-judge-and-justice-api.md  case-law.md  change-log.md  citation-lookup.md  citations.md  courtlistener-data-models-and-schemas.md  faqs.md  field-help.md  financial-disclosures.md  index.md  migration-guide.md  (+18 more)
docs/examples/: alerts.md  attorneys.md  audio.md  batch.md  citation-lookup.md  clusters.md  courts.md  docket-alerts.md  docket-entries.md  dockets.md  financial.md  index.md  opinions.md  parties.md  people.md  positions.md  recap-documents.md  search.md  tags.md
media/asciinema/: demo_courtlistener_cli.sh
src/: __init__.py  batch_processor.py  cli.py  client.py  config.py  output.py  pagination.py  reducers.py
src/commands/: __init__.py  alerts_commands.py  attorneys_commands.py  audio_commands.py  batch_commands.py  citation_lookup_commands.py  clusters_commands.py  courts_commands.py  docket_entries_commands.py  dockets_commands.py  financial_disclosures_commands.py  opinions_commands.py  parties_commands.py  people_commands.py  positions_commands.py  recap_documents_commands.py  search_commands.py  tags_commands.py
tests/: conftest.py  test_cli.py  test_client.py  test_delay.py
(+36 files in other folders)
