[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "courtlistener-client"
version = "1.0.0"
description = "Python CLI client for CourtListener REST API"
readme = "README.md"
license = {text = "CC0"}
authors = [
    {name = "Miguel FG", email = "miguel.fiandor.gutierrez@gmail.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.24.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.1.2",
]

[project.urls]
Homepage = "https://github.com/miguelfg/courtlistener-cli"
Documentation = "https://miguelfg.github.io/courtlistener-cli/"
Repository = "https://github.com/miguelfg/courtlistener-cli.git"
Issues = "https://github.com/miguelfg/courtlistener-cli/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
docs = [
    "mkdocs>=1.6.0; python_version >= '3.9'",
    "mkdocs-material>=9.5.0; python_version >= '3.9'",
    "mkdocs-click>=0.9.0; python_version >= '3.9'",
]

[project.scripts]
courtlistener-cli = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v --tb=short"
